@@ -7,12 +7,12 @@
     </execution>
     <comments> <en>
 
-    This is a driver debveloped for the Minolta magicolor 2300 DL
-    network color laser printer.
+	This is a driver developed for the Minolta magicolor 2300 DL
+	network color laser printer.
 	
-    It is possible that this driver will also work for the HP LaserJet
-    1000 and other Zenographics-based printers, but the author cannot
-    test this.
+	It is possible that this driver will also work for the HP LaserJet
+	1000 and other Zenographics-based printers, but the author cannot
+	test this.
 
     </en> </comments>
     <printers>
@@ -20,7 +20,13 @@
 	    <id>printer/Minolta-magicolor_2300_DL</id>
 	</printer>
 	<printer>
+	    <id>printer/Minolta-magicolor_2200_DL</id>
+	</printer>
+	<printer>
 	    <id>printer/HP-LaserJet_1000</id>
+	</printer>
+	<printer>
+	    <id>printer/Generic-ZjStream_Printer</id>
 	</printer>
 	<printer>
 	    <id>printer/Generic-GDI_Printer</id>
