@@ -1,0 +1,42 @@
+<option type="enum" id="opt/foo2zjs-InputSlot">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Media Source</en> </arg_longname>
+    <arg_shortname> <en>InputSlot</en> </arg_shortname>
+    <arg_execution>
+        <arg_group>General</arg_group>
+	<arg_order>110</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-s%s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>foo2zjs</driver>
+	<arg_defval>ev/foo2zjs-InputSlot-7</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/foo2zjs-InputSlot-1">
+	    <ev_longname> <en>Upper or Only One InputSlot</en> </ev_longname>
+	    <ev_shortname> <en>Upper</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-2">
+	    <ev_longname> <en>Lower Tray</en> </ev_longname>
+	    <ev_shortname> <en>Lower</en> </ev_shortname>
+	    <ev_driverval>2</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-4">
+	    <ev_longname> <en>Manual Feed</en> </ev_longname>
+	    <ev_shortname> <en>Manual</en> </ev_shortname>
+	    <ev_driverval>4</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-7">
+	    <ev_longname> <en>Auto Source</en> </ev_longname>
+	    <ev_shortname> <en>Auto</en> </ev_shortname>
+	    <ev_driverval>7</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
