@@ -13,14 +13,14 @@
     </arg_execution>
     <constraints>
 	<constraint sense="true">
-	<driver>foo2zjs</driver>
-	<arg_defval>ev/foo2zjs-Resolution-1200x600</arg_defval>
+	    <driver>foo2zjs</driver>
+	    <arg_defval>ev/foo2zjs-Resolution-1200x600</arg_defval>
 	</constraint>
 	<constraint sense="true">
-	<make>HP</make>
-	<model>LaserJet 1000</model>
-	<driver>foo2zjs</driver>
-	<arg_defval>ev/foo2zjs-Resolution-600x600</arg_defval>
+	    <make>HP</make>
+	    <model>LaserJet 1000</model>
+	    <driver>foo2zjs</driver>
+	    <arg_defval>ev/foo2zjs-Resolution-600x600</arg_defval>
 	</constraint>
     </constraints>
     <enum_vals>
@@ -54,6 +54,10 @@
 	        <constraint sense="false">
 	    	    <make>HP</make>
 	    	    <model>LaserJet 1000</model>
+	        </constraint>
+	        <constraint sense="false">
+	    	    <make>Minolta</make>
+	    	    <model>magicolor 2200 DL</model>
 	        </constraint>
             </constraints>
 	</enum_val>
