@@ -11,13 +11,24 @@
 	    </dpi>
 	</resolution>
 	<consumables>
-	    <comments>
-		<en>4 cartridges, waste toner, something else</en>
-	    </comments>
+	    <comments> <en>
+		Toner Black (4500 prints) - $79
+		Toner Yellow (4500 prints) - $119
+		Toner Magenta (4500 prints) - $119
+		Toner Cyan (4500 prints) - $119
+		Waste Toner Box (25000 prints) - $19
+		OPC Drum Catridge (45000 prints) - $149
+	    </en> </comments>
+	    <partno>1710517-005</partno>
+	    <partno>1710517-006</partno>
+	    <partno>1710517-007</partno>
+	    <partno>1710517-008</partno>
+	    <partno>1710522-001</partno>
+	    <partno>1710520-001</partno>
 	    <!--one or more "partno" elements.-->
 	</consumables>
     </mechanism>
-    <url>http://www.minolta-qms.com/products/color/mc2300DL/index.html</url>
+    <url>http://www.minolta-qms.com/products/color/mc2300DL/index.asp</url>
     <lang>
 	<proprietary/>
 	<!--no pjl--><!--No "text"?-->
@@ -29,8 +40,10 @@
     <driver>foo2zjs</driver>
     <unverified/><!--no "contrib_url"-->
     <comments> <en>
+
 	The magicolor 2300 DL is a network color laser printer with a
-	2003 street price of $600-$300 USD.  This printer is supported
+	2003 street price of $600-$800 USD.  This printer is supported
 	by the foo2zjs free software printer driver.
+
     </en> </comments>
 </printer>
