@@ -1,3 +1,13 @@
+2003-03-24  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Generic-ZjStream_Printer.xml,
+	  printer/Minolta-magicolor_2200_DL.xml: Added generic Zenograohics
+	  Zj stream printer and Minolta magicolor 2200 DL.
+
+	* driver/foo2zjs.xml, opt/foo2zjs*.xml: Updated for newest version
+	  of the "foo2zjs" driver: Added paper tray selection and N-up
+	  printing.
+
 2003-03-22  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README, USAGE: Updated for Foomatic 3.0.0beta2 (new
